# os-projects

./: CMakeLists.txt  main.c
assign1/source/: assign1part1  assign1part1.c  assign1part2  assign1part2.c  assign1part3  assign1part3.c  makefile  output-part2  pagetable.c  pagetable.h  phypages.c  phypages.h  status.txt
